--- a/IMS.WebApp/Shared/NavMenu.razor
+++ b/IMS.WebApp/Shared/NavMenu.razor
@@ -11,15 +11,10 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
-        </li>
+        </li> 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="inventories">
+                <span class="oi oi-plus" aria-hidden="true"></span> Inventories
             </NavLink>
         </li>
     </ul>
